fixed html problems on smaller screens

--- a/Auction-House/auction-house/src/components/Create/Create.css
+++ b/Auction-House/auction-house/src/components/Create/Create.css
@@ -9,6 +9,7 @@
     background-color: antiquewhite;
     border-radius: 50%;
     padding: 20px;
+    width: 300px;
 }
 .create-form {
     display: flex;
