--- a/Auction-House/auction-house/src/components/home/Home.css
+++ b/Auction-House/auction-house/src/components/home/Home.css
@@ -6,13 +6,16 @@
 }
 .home-img-holder img {
     width: 100%;
-    height: 45vh;
+    /* height: 45vh; */
     object-fit: cover;
+    filter: brightness(50%);
 }
 .home-img-holder h1 {
+    z-index: 1;
     position: absolute;
     margin: 0;
     color: green;
+    width: 700px;
     background-color: white;
     border-radius: 50%;
     padding: 25px;
